feat: return all secrets