@@ -1,6 +1,7 @@
 package com.exeal.vault.backoffice.secrets;
 
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -9,17 +10,17 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 public final class GetAllSecretsEndpoint {
-  private final RedisTemplate<String, Object> redisTemplate;
+  private final RedisTemplate<String, Object> secretsAccessor;
 
-  public GetAllSecretsEndpoint(RedisTemplate<String, Object> redisTemplate) {
-    this.redisTemplate = redisTemplate;
+  public GetAllSecretsEndpoint(RedisTemplate<String, Object> secretsAccessor) {
+    this.secretsAccessor = secretsAccessor;
   }
 
   @GetMapping(value = "/secrets", produces = MediaType.APPLICATION_JSON_VALUE)
   public ResponseEntity<List<Secret>> getAllSecrets() {
     return ResponseEntity.ok(
-        redisTemplate.opsForHash().entries("secrets").entrySet().stream()
-            .map(entry -> new Secret(entry.getKey().toString(), (String) entry.getValue()))
-            .toList());
+        secretsAccessor.opsForHash().entries("secrets").entrySet().stream()
+            .map(entry -> new Secret((String) entry.getKey(), (String) entry.getValue()))
+            .collect(Collectors.toList()));
   }
 }
